--- a/public/index.css
+++ b/public/index.css
@@ -105,7 +105,7 @@ button {
 }
 
 .card {
-  padding: 0 80px;
+  padding-left: 50px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
